# thesis_gamer_scraper

./: Cargo.toml  README.md
src/: main.rs  nodecsv.rs  pserror.rs  pushshift.rs  pushshiftbuilder.rs  scraperclient.rs
src/nodecsv/: mod.rs  nodecsv.rs  nodeio.rs
src/pushshift/: mod.rs  psendpoint.rs  pserror.rs  pushshiftbuilder.rs  sortopts.rs  timeconvenience.rs
src/scraperclient/: client.rs  mod.rs  nodestructs.rs  scraperclient.rs
