[package]
name = "thesis_gamer_scraper"
version = "0.1.0"
authors = ["Joshua Megnauth"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
regex = "^1.3.9"
reqwest = { version = "^0.10.7", features = ["blocking", "json"] }
serde = {version = "^1.0.0", features = ["derive"]}
serde_json = "^1.0.0"
