[package]
name = "thesis_gamer_scraper"
version = "0.3.0"
authors = ["Joshua Megnauth"]
edition = "2021"
repository = "https://github.com/joshuamegnauth54/thesis_gamer_scraper"
license = "GPL-3.0-or-later"

[dependencies]
csv = "1.1.6"
futures = "0.3.21"
hex = "0.4.3"
log = "0.4.17"
pretty_env_logger = "0.4"
regex = "1.5.6"
reqwest = { version = "0.11.11", features = [
    "json",
    "rustls",
    "stream",
    "trust-dns",
] }
ring = "0.16"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
url = "2.2"
